# pokemaster2

./: .bumpversion.cfg  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE.rst  README.md  conftest.py  noxfile.py  pyproject.toml  tasks.py
.github/workflows/: pre-commit-autoupdate.yml  release.yml  tests.yml
docs/: conf.py  index.rst  installation.rst  modules.rst  pokemaster2.db.rst  pokemaster2.rst  requirements.txt  usage.rst
news/: TEMPLATE
src/data/csv/: pokemon.csv
src/pokemaster2/: __init__.py  base_pokemon.py  cli.py  database.py  defaults.py  dna.py  pokedex.py  pokemon.py  prng.py  stats.py
src/pokemaster2/base/: nature.py  pokemon.py  stats.py
src/pokemaster2/db/: __init__.py  default.py  defaults.py  get.py  io.py  tables.py
src/pokemaster2/dex/: __init__.py  _pokemon.py  exceptions.py  formats.py
src/pokemaster2/dex/_graphics/: __init__.py  cell_buffer.py  colors.py  conversion.py  draw.py
src/pokemaster2/patch/: __init__.py
src/pokemaster2/patch/gen_3/: __init__.py  pokemon.py
tests/: __init__.py  test_base_pokemon.py  test_cli.py  test_database.py  test_dna.py  test_pokedex.py  test_pokemaster2.py  test_pokemon.py  test_prng.py  test_stats.py
tests/test_base/: test_base_pokemon.py  test_dna.py  test_prng.py  test_stats.py
tests/test_db/: test_default.py  test_defaults.py  test_get.py  test_io.py  test_tables.py
tests/test_patches/: __init__.py
